--- a/index.html
+++ b/index.html
@@ -1,3 +1,39 @@
+<!DOCTYPE html>
+<html>
+    <head>
+    <script src="script.js"></script>
+    <link rel="stylesheet" href="style.css">
+    <title>Simple Interest Calculator</title>
+    </head>
+    <body>
+        <div class="maindiv">
+            <h1>Simple Interest Calculator</h1>
+
+            Amount <input type="number"  id="principal">  <br/>
+            Rate <input type="range"  id="rate" min=1 max=20 step=0.25 value="default_val">  <br/>
+            <span id="rate_val">
+                10.25 %
+            </span>
+            No. of Years 
+            <select id="years">
+                <option value="1">1</option>
+                <!-- fill in the rest of the values-->
+            </select>
+            <br/>
+            Interest : <span id="result"></span><br>
+
+            <button onclick="compute()">Compute Interest</button>
+            <span id="result">
+
+            </span>
+        </div>
+        <footer>
+            &#169; This Calculator belongs to --your name--
+            </footer>
+    </body>
+</html>
+
+<--
 <html>
     <head>
     <script src="script.js"></script>
@@ -14,3 +50,4 @@
         <button onclick="compute()">Compute</button>
     </body>
 </html>
+--!>
