--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
         <div class="maindiv">
             <h1>Simple Interest Calculator</h1>
 
-            Amount <input type="number"  id="principal">  <br/>
+            Amount <input type="number" min=0 id="principal">  <br/>
             Rate <input type="range"  onchange="updateRate()" id="rate" min=1 max=20 step=0.25 value="default_val">  <br/>
             <span id="rate_val">
                 10.25 %
