--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
             </span>
         </div>
         <footer>
-            &#169; This Calculator belongs to --your name--
+            &#169; Everyone Can Get Rich
             </footer>
     </body>
 </html>
